# Alice-MLOps

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml
Docker/.images/: lr_model_service.Dockerfile
Docker/minio-mc/: wait-for-it.sh
cfg/: cfg.yaml  lr_model_service.yaml
docs/: Makefile  conf.py  index.rst  make.bat
models/: lr_parameters.json
notebooks/: EDA+FE.ipynb  alice_sites.csv  users_sites.csv
src/: __init__.py
src/api/: inference.py  lr_model.py  predicted_response.py  session_information.py
src/config/: __init__.py  config.py
src/data/: add_missing_data.py  extract_target.py  remove_bad_data.py
src/features/: build_categorical_features.py  build_features_pipeline.py  build_numeric_features.py  build_preference_features.py  build_preferences_pipeline.py  build_union_pipeline.py  build_vectorizer.py  build_vectorizer_pipeline.py
src/models/: create_submission.py  optimize_model.py  train_model.py  utils_mlflow.py
src/tests/: test_raw_data.py
